--- a/Homework1/contact.html
+++ b/Homework1/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>About Me</title>
+	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 <!-- 	<link rel="stylesheet" href="assets/css/reset.css"> -->
 </head>
@@ -18,26 +19,24 @@
 	</header>
 	<div class = "mainsection clearfix">
 		<div class = "leftsection clearfix">
-			<div>
+			<div class = "margin">
 				<p class = "LeftTitle">Contact</p>
 				<hr>
-				<form>
+				<form method = "post" name="myemailform" action="mailto:matthew.fallucca@gmail.com">
 					Name<br>
-					<input type = "text"><br>
+					<input type = "text" placeholder="John Smith" name = "name"><br><br>
 					Email<br>
-					<input type = "text"><br>
+					<input type = "text" placeholder="example@gmail.com" name = "email"><br><br>
 					Message<br>
-					<textarea>
-						
-					</textarea>
-					<br>
-					<input id = "Submit" type = "submit">
+					<textarea name = "message"></textarea>
+					<br><br>
+					<input id = "Submit" type = "submit" value="Submit">
 				</form>
 
 			</div>
 		</div>
 		<div class = "rightsection clearfix">
-			<div>
+			<div class = "margin">
 				<p>Connect With Me</p>
 				<hr>
 					<div class = "floatleft iconsize">
