--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>About Me</title>
+	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-<!-- 	<link rel="stylesheet" href="assets/css/reset.css"> -->
+
 </head>
 <body class = "content">
 	<header>
@@ -18,7 +19,7 @@
 	</header>
 	<div class = "mainsection clearfix">
 		<div class = "leftsection clearfix">
-			<div>
+			<div class = "margin">
 				<p class = "LeftTitle">About Me</p>
 				<hr>
 					<div id = "photo" class = "floatleft myphoto">
@@ -27,13 +28,14 @@
 				<p>
 					Hi!  My name is Matthew Fallucca, and I'm currently working for Liberty Mutual Insurance as a System's Administrator.  I'm looking to expand my knowledge of full stack web development and am looking forward to the KU Coding Bootcamp.
 				</p>
+				<br>
 				<p>
 					I have a wife named Ashley, son named Graham, and two crazy dogs.  We are expecting our second son this December!
 				</p>
 			</div>
 		</div>
 		<div class = "rightsection clearfix">
-			<div>
+			<div class = "margin">
 				<p>Connect With Me</p>
 				<hr>
 					<div class = "floatleft iconsize">
