--- a/Homework1/portfolio.html
+++ b/Homework1/portfolio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>About Me</title>
+	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 <!-- 	<link rel="stylesheet" href="assets/css/reset.css"> -->
 </head>
@@ -18,20 +19,37 @@
 	</header>
 	<div class = "mainsectionport clearfix">
 		<div id = "test" class = "leftsection clearfix">
-			<div>
+			<div class = "margin">
 				<p class = "LeftTitle">Portfolio</p>
 				<hr>
-				<div class = "portimages">
-					<img src="assets/images/a.jpg">
-					<img src="assets/images/b.jpg">
-					<img src="assets/images/c.jpg">
-					<img src="assets/images/d.jpg">
-					<img src="assets/images/e.jpg">
+				<div class = "clearfix marginpics">
+					<div class = "image portimages floatleft">
+						<a href="https://www.google.com"><img src="assets/images/a.jpg">
+						<h1>Test 1</h1></a>
+					</div>
+					<div class = "image floatright portimages marginright">
+						<a href="https://www.google.com"><img src="assets/images/b.jpg">
+						<h1>Test 2</h1></a>
+					</div>
 				</div>
+				<div class = "clearfix marginpics">
+					<div class = "image portimages floatleft">
+						<a href="https://www.google.com"><img src="assets/images/c.jpg">
+						<h1>Test 3</h1></a>
+					</div>
+					<div class = "image floatright portimages marginright">
+						<a href="https://www.google.com"><img src="assets/images/d.jpg">
+						<h1>Test 4</h1></a>
+					</div>
+				</div>
+					<div class = "clearfix image portimages floatleft">
+						<a href="https://www.google.com"><img src="assets/images/e.jpg">
+						<h1>Test 5</h1></a>
+					</div>
 			</div>
 		</div>
 		<div class = "rightsection clearfix">
-			<div>
+			<div class = "margin">
 				<p>Connect With Me</p>
 				<hr>
 					<div class = "floatleft iconsize">
