updates to all 3

--- a/Homework3/index.html
+++ b/Homework3/index.html
@@ -16,13 +16,29 @@
     
       <div class='lettersguessedcontainer'>
         <div class='lettersguessedtitle'>Guessed Letters</div>
-        <div id="wrongletters" class='wrongletterslist'></div>
+        <div id='wrongletters' class='wrongletterslist'></div>
+      </div>
+
+      <div class='remainingguessescontainer'>
+      	<div class='remainingguessestitle'>Guesses Remaining</div>
+      	<div id='remainingguesses' class='remainingguesses'>15</div>
       </div>
 
     <div class='realwordcontainer'>
     	<div class='realwordtitle'>Your Word</div>
         <div class='wordbox'>
             <div class='realword'>
+            </div>
+        </div>
+    </div>   
+    <div class='recordcontainer'>
+    	<div class='recoordtitle'>Your Record</div>
+        <div class='recordbox'>
+        	<div class="winstitle">Wins
+            	<div class='recordwins'>0</div>
+            </div>
+            <div class="lossestitle">Losses
+            	<div class='recordlosses'>0</div>
             </div>
         </div>
     </div>   
