adding classes to row

--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -15,21 +15,21 @@
 	</header>
 	<div class="container">
 		<h2 id="choosetitle">Choose Your Character</h2>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 			<input type="image" class="img-thumbnail choosecharacter" src="assets/images/vader.png" id="Vader" />
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 			<input type="image" class="img-thumbnail choosecharacter" src="assets/images/han.png" id="Han" />
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 			<input type="image" class="img-thumbnail choosecharacter" src="assets/images/luke.png" id="Luke" />
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 			<input type="image" class="img-thumbnail choosecharacter" src="assets/images/boba.png" id="Boba" />
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 			<img id="currentEnemy">
 		</div>
 	</div>
