adding classes to row

--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -35,34 +35,34 @@
 	</div>
 	<div class="container">
 		<h2 id="yourChar">Your Character</h2>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 			<img id="chosenChar">
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 col-sm-2">
 			<button id="attackButton" class="fancy-button">Attack!
 			</button>
 		</div>
 	</div>
 	<div class="container">
-		<div class="col-md-4">
+		<div class="col-md-4 col-sm-4">
 			<h3 id="yourHealth">Your Remaining Health</h3>
 		</div>
-		<div class="col-md-4 offset-md-4">
+		<div class="col-md-4 col-sm-4 offset-md-4">
 			<h3 id="enemyHealth">Enemy's Remaining Health</h3>
 		</div>
 	</div>
 	<div class="container">
 		<h2 id="enemies">Enemy Characters</h2>
-		<div class="col-md-2 enemydiv1">
+		<div class="col-md-2 col-sm-2 enemydiv1">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy1" />
 		</div>
-		<div class="col-md-2 enemydiv2">
+		<div class="col-md-2 col-sm-2 enemydiv2">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy2" />
 		</div>
-		<div class="col-md-2 enemydiv3">
+		<div class="col-md-2 col-sm-2 enemydiv3">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy3" />
 		</div>
-		<div class="col-md-2 enemydiv4">
+		<div class="col-md-2 col-sm-2 enemydiv4">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy4" />
 		</div>
 	</div>
