--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -22,33 +22,39 @@
 			<input type="image" class="img-thumbnail choosecharacter" src="assets/images/han.png" id="Han" />
 		</div>
 		<div class="col-md-2 col-sm-2">
-			<input type="image" class="img-thumbnail choosecharacter" src="assets/images/luke.png" id="Luke" />
+			<input type="image" class="img-thumbnail choosecharacter currentEnemy" src="assets/images/luke.png" id="Luke" />
 		</div>
 		<div class="col-md-2 col-sm-2">
 			<input type="image" class="img-thumbnail choosecharacter" src="assets/images/boba.png" id="Boba" />
-		</div>
-		<div class="col-md-2 col-sm-2">
-		</div>
-		<div class="col-md-2 col-sm-2">
-			<img id="currentEnemy">
 		</div>
 	</div>
 	<div class="container">
 		<h2 id="yourChar">Your Character</h2>
 		<div class="col-md-2 col-sm-2">
-			<img id="chosenChar">
+			<img id="chosenChar" class="img-thumbnail">
 		</div>
 		<div class="col-md-2 col-sm-2">
 			<button id="attackButton" class="fancy-button">Attack!
 			</button>
+		</div>
+		<div class="col-md-2 col-sm-2">
+			<img id="currentEnemy" class="img-thumbnail">
 		</div>
 	</div>
 	<div class="container">
 		<div class="col-md-4 col-sm-4">
 			<h3 id="yourHealth">Your Remaining Health</h3>
 		</div>
-		<div class="col-md-4 col-sm-4 offset-md-4">
+		<div class="col-md-5 col-sm-5 offset-md-2">
 			<h3 id="enemyHealth">Enemy's Remaining Health</h3>
+		</div>
+	</div>
+		<div class="container">
+		<div class="col-md-4 col-sm-4">
+			<h3 id="yourAttackpower">Your Attack Power</h3>
+		</div>
+		<div class="col-md-4 col-sm-4 offset-md-4">
+			<h3 id="enemyCounterpower">Enemy's Counter Attack</h3>
 		</div>
 	</div>
 	<div class="container">
