--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -4,6 +4,7 @@
 	<title>Star Wars Game!</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 
 <!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -34,7 +35,7 @@
 			<img id="chosenChar" class="img-thumbnail">
 		</div>
 		<div class="col-md-2 col-sm-2">
-			<button id="attackButton" class="fancy-button">Attack!
+			<button id="attackButton" class="btn-danger">Attack!
 			</button>
 		</div>
 		<div class="col-md-2 col-sm-2">
@@ -59,16 +60,16 @@
 	</div>
 	<div class="container">
 		<h2 id="enemies">Enemy Characters</h2>
-		<div class="col-md-2 col-sm-2 enemydiv1">
+		<div class="col-md-2 col-sm-2 enemydiv1 choosefromenemies">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy1" />
 		</div>
-		<div class="col-md-2 col-sm-2 enemydiv2">
+		<div class="col-md-2 col-sm-2 enemydiv2 choosefromenemies">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy2" />
 		</div>
-		<div class="col-md-2 col-sm-2 enemydiv3">
+		<div class="col-md-2 col-sm-2 enemydiv3 choosefromenemies">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy3" />
 		</div>
-		<div class="col-md-2 col-sm-2 enemydiv4">
+		<div class="col-md-2 col-sm-2 enemydiv4 choosefromenemies">
 			<input type="image" class="img-thumbnail chooseenemy" id="enemy4" />
 		</div>
 	</div>
