--- a/Homework6/index.html
+++ b/Homework6/index.html
@@ -25,7 +25,7 @@
       <input id="add-topics" type="submit" value="Add a topic!">
     </form>
 
-       <div id="topics-view"></div>
+       <row id="topics-view"></row>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/script.js"></script>
