--- a/Homework7/index.html
+++ b/Homework7/index.html
@@ -13,7 +13,6 @@
 	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 
 	<!-- Moment.js Reference -->
-	<!-- <script src="http://momentjs.com/downloads/moment.js"></script> -->	
  	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
 <body>
@@ -21,7 +20,7 @@
 <!-- Train Tracker -->
 <div class="container">
 
-	<!-- Jumbotron -->
+	<!-- JUMBOTRON! -->
 	<div class="jumbotron" style="background-color: #ff976b; color: black">
 		<h1 class="text-center">Train Data Management</h1>
 		<h3 class="text-center">A Comprehensive Directory of Train Billable Hours</h3>
@@ -61,7 +60,7 @@
 				<div class="panel-body">
 	
 
-				<!-- Entry Form -->
+				<!-- New Train Form -->
 				<form>
 					<div class="form-group">
 						<label for="">Train Name</label>
