--- a/Homework7/index.html
+++ b/Homework7/index.html
@@ -23,7 +23,7 @@
 	<!-- JUMBOTRON! -->
 	<div class="jumbotron" style="background-color: #ff976b; color: black">
 		<h1 class="text-center">Train Data Management</h1>
-		<h3 class="text-center">A Comprehensive Directory of Train Billable Hours</h3>
+		<h3 class="text-center">Your Train Information Resource!</h3>
 	</div>
 	
 	<div class="row">
